# KPad-Text-Editor

./: .gitignore  README.md
KPad/: .gitignore  CMakeLists.txt  kpad.cpp  kpad.h  kpad.ui  kpad_statusbar.cpp  kpad_view.cpp  main.cpp
KPad/src/: kpad.cpp  kpad_edit.cpp  kpad_file.cpp  kpad_keyevents.cpp  kpad_misc.cpp
